# VARIANT-GNN

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  MODEL_CARD.md  README.md  SECURITY.md  VARIANT_GNN_Colab_Training.ipynb  app.py  baslat.bat  build_notebook.py  colab_setup_guide.md  conftest.py  debug_import.py  generate_realistic_data.py  generate_report_pdf.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_sample.csv  train_log.txt  train_log2.txt
.github/workflows/: ci.yml
configs/: colab_teknofest_config.yaml  config.yaml  default.yaml
data/: README.md  test_cftr.csv  test_general.csv  test_hereditary_cancer.csv  test_pah.csv  test_variants.csv  test_variants_blind.csv  train_cftr.csv  train_general.csv  train_hereditary_cancer.csv  train_pah.csv  train_variants.csv
data_contracts/: __init__.py  input_schema.json  sample_input.csv  sample_output.csv  variant_schema.py
models/: dnn_pretrained_100k.pt  gnn_model.pth  pretrain_scaler.pkl  scaler.pkl  xgb_model.json  xgb_pretrained_100k.json
reports/: cv_report.json
src/: Untitled-2.txt  __init__.py  config.py  data_processing.py  evaluate.py  explain.py  import torch.txt  models.py  train.py  tune.py  utils.py
src/calibration/: __init__.py  calibrator.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  column_aligner.py  loader.py  schema.py
src/evaluation/: __init__.py  adversarial_validation.py  metrics.py  plots.py
src/explainability/: __init__.py  clinical_insight.py  clinvar_api.py  (+6 more)
tests/: test_column_aligner_anonymous.py  test_pipeline.py
(+33 files in other folders)
