[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "variant-gnn"
version = "0.1.0"
description = "Graph Neural Network tabanlı genetik varyant patojenite tahmini — TEKNOFEST 2026"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "pandas==2.1.4",
    "numpy==1.26.4",
    "scikit-learn==1.4.2",
    "xgboost==2.0.3",
    "torch==2.2.1",
    "torch-geometric==2.5.3",
    "shap==0.45.1",
    "lime==0.2.0.1",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "tqdm==4.66.2",
    "optuna==3.5.0",
    "imbalanced-learn==0.12.0",
    "streamlit==1.32.2",
    "joblib==1.4.0",
    "pydantic==2.6.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-timeout==2.3.1",
    "flake8==7.0.0",
    "black==24.3.0",
    "mypy==1.9.0",
    "pre-commit==3.7.0",
]

[project.scripts]
variant-gnn = "main:main"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
